third_party/move/move-compiler-v2/tests/more-v1/parser/use_module_member_invalid_comma.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/use_module_member_invalid_comma.move:4:26
  │
4 │     use 0x1::X::{S as XS,,};
  │                          ^ Expected a module member alias
